[package]
name = "smp-nostd"
version = "0.1.0"
edition = "2024"
authors = ["Matt Gates <suhteevah@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Bare-metal SMP (Symmetric Multi-Processing) support for x86_64: Local APIC, I/O APIC, AP trampoline boot, per-CPU data, work-stealing scheduler, and no_std synchronization primitives"
repository = "https://github.com/suhteevah/smp-nostd"
keywords = ["smp", "multicore", "apic", "scheduler", "no_std"]
categories = ["no-std", "hardware-support", "concurrency"]
readme = "README.md"
rust-version = "1.85"

[dependencies]
log = { version = "0.4", default-features = false }
